2010-07-28  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        WebKitTestRunner needs to support layoutTestController.execCommand
        <https://bugs.webkit.org/show_bug.cgi?id=42538>

        WebKitTestRunner needs layoutTestController.isCommandEnabled
        <https://bugs.webkit.org/show_bug.cgi?id=42671>

        * WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl:
        Added execCommand and isCommandEnabled.
        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
        (WTR::LayoutTestController::execCommand): Added.
        (WTR::LayoutTestController::isCommandEnabled): Added.
        * WebKitTestRunner/InjectedBundle/LayoutTestController.h: Ditto.

2010-07-28  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Introduce drt_expectations.txt for NRWT
        https://bugs.webkit.org/show_bug.cgi?id=43123

        Introduce LayoutTests/platform/chromium/drt_expectations.txt,
        which overrides test expectations only for DumpRenderTree, in
        order to manage what problems are investigated.
        This change will be reverted when we switch to DRT completely.

        * Scripts/webkitpy/layout_tests/port/chromium.py:
         Add drt_expectations.txt content to the result of
         test_expectations_overrides() if --use-drt is specified.

2010-07-28  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        First pass at visited link support for WK2
        https://bugs.webkit.org/show_bug.cgi?id=43157

        * MiniBrowser/mac/AppDelegate.m:
        (didNavigateWithNavigationData):
        (didPerformClientRedirect):
        (didPerformServerRedirect):
        (didUpdateHistoryTitle):
        (populateVisitedLinks): Added for the new version of the HistoryClient.
        (-[BrowserAppDelegate init]): Set the HistoryClient right after creating the context(s)
        
        * MiniBrowser/mac/BrowserWindowController.m: